# predictive-text

./: README.md  pyproject.toml  tasks.py
src/: main.py  nlp.py
src/data/: __init__.py
src/model/: __init__.py  knn.py  mle.py  model.py  naive.py  ngrams.py
src/model/bigram/: __init__.py  laplace_bigrams.py  naive_bigrams.py
