[tool.poetry]
name = "predictive-text"
version = "0.3.4"
description = ""
authors = ["Dawson Booth <github@dawsonbooth.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dawsonbooth/predictive-text"
repository = "https://github.com/dawsonbooth/predictive-text"
keywords = []
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.8"
wn = "^0.5.1"
nltk = "^3.5"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
black = "^20.8b1"
flake8 = "^3.8.4"
invoke = "^1.5.0"
isort = "^5.7.0"
mypy = "^0.812"
pyclean = "^2.0.0"
pyinstaller = "^4.2"
rope = "^0.18.0"

joblib = {git = "https://github.com/joblib/joblib.git"}

[tool.isort]
line_length = 119
profile = "black"

[tool.black]
line-length = 119

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
